gitops/platform/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homepage.__ZONE_NAME__`)
      services:
        - kind: Service
          name: homepage
          port: 80
  tls: {}

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-wiredoor
  namespace: homepage
spec:
  entryPoints:
    - webwiredoor
  routes:
    - kind: Rule
      match: Host(`homepage.__ZONE_NAME__`)
      services:
        - kind: Service
          name: homepage
          port: 80
